Fix issue with chunkhash in filename

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="initial-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>React Redux Scaffold</title>
-  <link href="app.4a6d16c409e509ec8634.css" rel="stylesheet"></head>
+  <link href="app.29fc972c3d6c9ffdc040.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="app.js"></script></body>
+  <script type="text/javascript" src="vendor.a9d1bad235dc6a05cc29.js"></script><script type="text/javascript" src="app.29fc972c3d6c9ffdc040.js"></script></body>
 </html>
